--- a/links/about.html
+++ b/links/about.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
 <title>About TalkingPoints</title>
 
