--- a/links/about.html
+++ b/links/about.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <title>About TalkingPoints</title>
 
@@ -12,13 +13,16 @@
 </head>
 
 <body>
-	<h1>About TalkingPoint</h1>
+	<div class="container">
+		<div class="row">...</div>
+	</div>
+	<h3>About TalkingPoint</h3>
 
 	<ul>
 		<li>Version: <code>1.0.0</code></li>
 		<li>Dop Sun, 2017, All rights reserved.</li>
 	</ul>
-	<h2>Includes content from:</h2>
+	<h4>Includes content from:</h4>
 	<ul>
 		<li>FontAwesome: http://fontawesome.io/</li>
 	</ul>
